[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardstop"
version = "0.1.0"
description = "Meeting countdown overlays for macOS — escalating screen-border animations so you never miss a meeting on an ultrawide monitor"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-Cocoa>=10.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "PyYAML>=6.0",
    "Flask>=3.0",
    "waitress>=3.0",
    "icalendar>=5.0",
    "recurring-ical-events>=2.0",
]

[project.scripts]
hardstop = "hardstop:main"

[tool.setuptools]
py-modules = ["hardstop"]
